--- a/install-ncarcompiler-0.3.1
+++ b/install-ncarcompiler-0.3.1
@@ -28,5 +28,8 @@ for file in *; do
     fi
 done
 
+echo "--------------------"
+echo Not creating the module yet, see https://github.com/NCAR/CheyenneModules/issues/7 for details
+echo "--------------------"
 echo You may restore the previous status of the repo with
 echo git checkout $branch
