install script now properly copies syslinks, fixing issue #14

--- a/install-ncarcompilers-0.3.3
+++ b/install-ncarcompilers-0.3.3
@@ -24,7 +24,7 @@ for file in *; do
           $file != hpci.*.log &&            \
           $file != test_helper.py &&        \
           $file != test_wrapper.py ]]; then \
-      cp $file $HPCI_SW_DIR
+      cp -r $file $HPCI_SW_DIR              # preserving symbolic links
     fi
 done
 
