--- a/install-ncarcompilers-0.3.4
+++ b/install-ncarcompilers-0.3.4
@@ -66,7 +66,7 @@ EOF
 
 echo "-----"
 echo Git repository for the modules status, checked in $HPCI_MOD_DIR
-git --git-dir=$HPCI_MOD_DIR/.git/ --work-tree=$HPCI_MOD_DIR status
+(cd $HPCI_MOD_DIR; git status)
 
 echo "-----"
 echo In current directory, you may restore the previous status of the repo with
